// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-text-like #render clearable should render component as expected (1) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render clearable should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (2) 1`] = `"<gux-form-field-text-like lang="en" clearable="" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render clearable should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (3) 1`] = `"<gux-form-field-text-like lang="en" clearable="true" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render clearable should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (4) 1`] = `"<gux-form-field-text-like lang="en" clearable="false" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render clearable should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (5) 1`] = `"<gux-form-field-text-like lang="en" clearable="" hydrated=""> <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render clearable should render component as expected (5) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render help should render component as expected 1`] = `"<gux-form-field-text-like hydrated=""> <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i"> <label slot="label" for="gux-form-field-input-i">Default</label> <span slot="help" id="gux-form-field-help-i">This is a help message</span> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render help should render component as expected 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (1) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="email" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (2) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="password" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (3) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (1) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (2) 1`] = `"<gux-form-field-text-like lang="en" label-position="above" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (3) 1`] = `"<gux-form-field-text-like lang="en" label-position="beside" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (4) 1`] = `"<gux-form-field-text-like lang="en" label-position="screenreader" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (1) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render loading should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (2) 1`] = `"<gux-form-field-text-like lang="en" loading="" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render loading should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <gux-radial-loading hydrated=""></gux-radial-loading>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (3) 1`] = `"<gux-form-field-text-like lang="en" loading="true" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render loading should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <gux-radial-loading hydrated=""></gux-radial-loading>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (4) 1`] = `"<gux-form-field-text-like lang="en" loading="false" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render loading should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (5) 1`] = `"<gux-form-field-text-like lang="en" loading="" hydrated=""> <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render loading should render component as expected (5) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <gux-radial-loading hydrated=""></gux-radial-loading>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render prefix should render component as expected 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <span slot="prefix" id="gux-prefix-i">Prefix</span> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i" aria-describedby="gux-prefix-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render prefix should render component as expected 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-has-prefix gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like #render suffix should render component as expected 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i" aria-describedby="gux-suffix-i"> <span slot="suffix" id="gux-suffix-i">Suffix</span> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like #render suffix should render component as expected 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-has-suffix gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like input attributes should render component as expected (1) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like input attributes should render component as expected (2) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-text-like input attributes should render component as expected (3) 1`] = `"<gux-form-field-text-like lang="en" hydrated=""> <input slot="input" type="text" value="Sample text" required="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-text-like>"`;

exports[`gux-form-field-text-like input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <slot name="prefix"></slot>
        <slot name="input"></slot>
        <slot name="suffix"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;
